Fixed spacing.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -98,7 +98,7 @@ ul li:hover{
 #banner img{
   width: 100%;
   height: 100%;
-  padding: 24px 32px;
+  padding: 32px 40px 32px 24px;
 }
 
 .learn-pic{
@@ -109,9 +109,8 @@ ul li:hover{
   color: dimgray;
   margin-left: 40px;
   /*width: 40%;*/
-  width: 350px;
-  padding-right: 150px;
-  padding-left: 24px;
+  max-width: 350px;
+  padding: 32px 150px 32px 0;
   /*max-width: 350px;*/
 }
 
@@ -132,11 +131,12 @@ ul li:hover{
 @media only screen and (max-width: 480px){
   #banner{
     margin-top: 180px;
+    justify-content: center;
     /*max-width: 480px;*/
   }
   .learn-box{
     width: 100%;
-    padding: 0;
+    padding: 32px 16px;
     margin: 0;
   }
 
@@ -144,6 +144,7 @@ ul li:hover{
   .learn-box h4,
   .learn-box span{
     padding: 16px 12px;
+    text-align: center;
   }
 
   #banner span{
@@ -253,13 +254,17 @@ ul li:hover{
   .practice-feature{
     flex-direction: column;
     align-items: center;
-    padding: 0;
+    padding: 16px 0px;
   }
   .feature-text{
     width: 100%;
     align-items: center;
     padding: 0;
   }
+  .feature-text h4{
+    text-align: center;
+  }
+
   .feature-image{
     /*width: 100%;*/
     padding: 2rem 0 2rem 0;
@@ -279,6 +284,7 @@ ul li:hover{
   background-color: lightgray;
   width: 100%;
   margin: 0 auto;
+  padding: 32px 0;
 }
 
 #learning-mobile{
@@ -289,13 +295,13 @@ ul li:hover{
   color: dimgray;
   align: center;
   margin: 0;
-  padding: 0 0 32px 0;
+  padding-bottom: 32px;
 }
 
 .learning-row{
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   padding: 10px 0;
 }
 
@@ -330,6 +336,7 @@ ul li:hover{
     justify-content: space-between;
     width: 100%;
     background-color: white;
+    padding: 32px 0;
   }
 
   #learning-mobile h1{
@@ -342,6 +349,8 @@ ul li:hover{
     padding: 16px;
     text-align: center;
     margin-bottom: 8px;
+    margin-left: 16px;
+    margin-right: 16px;
     color: dimgray;
     font-weight: bold;
   }
@@ -350,10 +359,22 @@ ul li:hover{
 
 #thesis{
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  width: 100%;
+}
+#thesis h1{
+  padding: 32px 0;
+}
+
+.thesis-content{
+  display: flex;
   justify-content: space-between;
   background-color: white;
   width: 100%;
 }
+
 #thesis-mobile{
   display: none;
 }
@@ -370,6 +391,7 @@ ul li:hover{
   }
   #thesis-mobile h1{
     text-align: center;
+    padding-top: 32px;
   }
 }
 
